-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 19
-
Component/s: hotspot
-
b19
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8375140 | openjdk8u492 | Jonathan Dowland | P4 | Resolved | Fixed | b01 |
| JDK-8302835 | 17.0.7-oracle | Ivan Bereziuk | P4 | Closed | Duplicate | b01 |
| JDK-8286803 | 17.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
| JDK-8302836 | 11.0.19-oracle | Ivan Bereziuk | P4 | Closed | Duplicate | b01 |
| JDK-8290665 | 11.0.17 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8302626 | 8u381 | Ivan Bereziuk | P4 | Resolved | Fixed | b01 |
memory_usage_in_bytes: 18029760512
memory_max_usage_in_bytes: 423686144
This could be improved , at a lot of places in the hs_err file output we already print the larger memory-related infos in k , for example rlimit information
or /proc/meminfo.
- backported by
-
JDK-8286803 [linux] improve print_container_info
-
- Resolved
-
-
JDK-8290665 [linux] improve print_container_info
-
- Resolved
-
-
JDK-8302626 [linux] improve print_container_info
-
- Resolved
-
-
JDK-8375140 [linux] improve print_container_info
-
- Resolved
-
-
JDK-8302835 [linux] improve print_container_info
-
- Closed
-
-
JDK-8302836 [linux] improve print_container_info
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/c1e2cf64
-
Commit
openjdk/jdk17u-dev/cc91c6e8
-
Commit
openjdk/jdk/6c6d5223
-
Commit(master)
openjdk/jdk8u-dev/efa1fccb
-
Review
openjdk/jdk11u-dev/1240
-
Review
openjdk/jdk17u-dev/394
-
Review
openjdk/jdk/8217
-
Review(master)
openjdk/jdk8u-dev/724