8284758: [linux] improve print_container_info

Reviewed-by: sgehwolf
Backport-of: 6c6d5223dfaae268f968f4292356d4be89adb122